vlib/v/checker/tests/option_type_call_err.vv
import os

fn main() {
	os.ls('.').filter(it.ends_with('.v')) or { return }
}
